--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.go",
-      "use": "@vercel/go"
+  "functions": {
+    "api/index.go": {
+      "memory": 1024,
+      "maxDuration": 10
     }
-  ],
+  },
   "routes": [
     {
       "src": "/static/(.*)",
@@ -16,9 +16,8 @@
       "dest": "/static/app.html"
     },
     {
-      "src": "/(.*)",
-      "dest": "/api/index.go"
+      "src": "/",
+      "dest": "/static/index.html"
     }
-  ],
-  "outputDirectory": "static"
+  ]
 }
