--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   },
   "routes": [
     {
+      "src": "/api/config",
+      "dest": "/api/index.go"
+    },
+    {
       "src": "/static/(.*)",
       "dest": "/static/$1"
     },
